--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Recipes</title>
 </head>
-<body>
-    <h1> Recipes</h1>
-    <ul>
+<body class ="main-bg">
+    <h1 class="main-title"> Recipes, Dude!</h1>
+    <ul class="contents-list">
         <li><a href="recipes/lasagna.html">Lasagna Recipe</a></li>
         <li><a href="recipes/iced_cream.html">Iced Cream Recipe</a></li>
         <li><a href="recipes/cake.html">Cake Recipe</a></li>
