updated style sheet for all pages, added content (recipes/ingredients)

--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
 <body class ="main-bg">
     <h1 class="main-title"> Recipes, Dude!</h1>
     <ul class="contents-list">
-        <li><a href="recipes/lasagna.html">Lasagna Recipe</a></li>
-        <li><a href="recipes/iced_cream.html">Iced Cream Recipe</a></li>
-        <li><a href="recipes/cake.html">Cake Recipe</a></li>
+        <li id="lasagna-bg"><a href="recipes/lasagna.html">Lasagna Recipe</li>
+        <li id="iced-cream-bg"><a href="recipes/iced_cream.html">Iced Cream Recipe</li>
+        <li id="cake-bg"><a href="recipes/cake.html">Cake Recipe</li>
     </ul>
-    
     </body>
 </html>
