--- a/recipes/cake.html
+++ b/recipes/cake.html
@@ -4,28 +4,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css">
     <title>Cake recipe</title>
 </head>
-<body>
+<body class="main-bg">
     <h1>Cake</h1>
-    <a href="../index.html">Go Back</a>
+    <a class="back-button" href="../index.html">Go Back</a>
     <p></p>
-    <img src="../Images/rainbow-cake760x580.jpg" alt="cake image">
+    <img class="page-images"  src="../Images/rainbow-cake760x580.jpg" alt="cake image">
     <h2>Cake Indeed</h2>
-    <p> blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah  </p>
-    <p> blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah </p>
+    <p> Cake is hard  </p>
+    <p> Thanks Betty Crocker™ Super Moist™ Vanilla Cake Mix</p>
     <h3>Ingredients</h3>
-    <ul>
-        <li>Flour</li>
-        <li>Eggs</li>
-        <li>Cream</li>
-        <li>Soul, Sista</li>
+    <ul class="list-format">
+        <li>2 boxes (15.25 oz) Betty Crocker™ Super Moist™ Vanilla Cake Mix</li>
+        <li>2 cups water</li>
+        <li>1 cup vegetable oil</li>
+        <li>6 Eggs</li>       
+        <li>2 packages (2.7 oz each) Betty Crocker™ classic gel food colors</li>
+        <li>1 cup shortening</li>
+        <li>1 cup butter, softened</li>      
+        <li>1 bag (2 lb) powdered sugar</li>
+        <li>2 teaspoons vanilla</li>
+        <li>3 to 4 tablespoons milk</li>
     </ul>
-    <h4>The way</h4>
-    <ol>
-        <li>Mix the flour, Eggs and Cream</li>
-        <li>Add a little Soul, Sista</li>
-        <li>Combine and consume</li>
+    <h3>The way</h3>
+    <ol class="list-format">
+        <li>Heat oven to 350°F. Spray 3 (8-inch) round cake pans with cooking spray.</li>
+        <li>In large bowl, beat cake mix, water, oil and eggs with electric mixer on low speed 30 seconds, then on medium speed 2 minutes, scraping bowl occasionally. Divide batter evenly among 6 small bowls, about 1 1/3 cups each.</li>
+        <li>1Using food colors, tint batter in 1 bowl blue, 1 bowl red, 1 bowl green, 1 bowl yellow, 1 bowl orange (using red and yellow) and 1 bowl purple (using blue and red).</li>
+        <li>Refrigerate 3 colors of batter until ready to bake. Pour remaining 3 colors of batter into cake pans.</li>       
+        <li>Bake 18 to 20 minutes or until cake springs back when touched lightly in center and begins to pull away from side of pan. Cool 10 minutes. Remove from pans to cooling racks; cool completely.</li>
+        <li>Wash cake pans. Bake and cool remaining 3 cake layers as directed.</li>
+        <li>In large bowl, beat shortening and butter with electric mixer on medium speed until light yellow. On low speed, gradually beat in powdered sugar. Beat in vanilla. Add milk, 1 tablespoon at a time, beating until frosting is smooth. Beat on high speed until light and fluffy.</li>      
+        <li>Trim rounded tops off cakes to level, if needed. On serving plate, place purple cake layer. Spread with frosting to within 1/4 inch of edge. Repeat with blue, green, yellow, orange and red cake layers. Spread light coat of frosting on top and side of cake to seal in crumbs, then frost with remaining frosting.</li>
+            
     </ol>
 </body>
 </html>
