--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -4,30 +4,45 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css">
     <title>Lasagna recipe</title>
 </head>
-<body>
+<body class="main-bg">
     <h1>Lasagna</h1>
-    <a href="../index.html">Go Back</a>
+    <a class="back-button" href="../index.html">Go Back</a>
     <p></p>
-    <img src="../Images/lasagnaimage.jpg" alt="lasagna image">
+    <img class="page-images" src="../Images/lasagnaimage.jpg" alt="lasagna image">
     <h2>Make me a lasagna</h2>
-    <p> blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah  </p>
-    <p> blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah </p>
+    <p> This is a lasagna recipe, use it to make lasagna. </p>
+    <p> This is intended for professional use only, please do not try this at home. </p>
     <h3>Ingredients</h3>
-    <ul>
-        <li>Pasta</li>
-        <li>Cheese</li>
-        <li>Tomato</li>
-        <li>The blood of 300 virgin goats</li>
+    <ul class="list-format">
+        <li>San Remo Lasagna Sheet 375g</li>
+        <li>Half a cup mozzarella cheese (to sprinkle on top before baking)</li>
+        <li>1 tbsp oil</li>
+        <li>1 onion, finely chopped</li>
+        <li>1 garlic clove, crushed</li>
+        <li>500g beef mince</li>
+        <li>425g San Remo tomato-based sauce</li>
+        <li>2 tbsp butter</li>
+        <li>2 tbsp plain flour</li>
+        <li>2 cups milk</li>
+        <li>Half a cup parmesan/cheddar cheese, grated</li>
     </ul>
-    <h4>The way</h4>
-    <ol>
-        <li>Cook the Pasta</li>
-        <li>Cook the Cheese</li>
-        <li>Cook the Tomato</li>
-        <li>Cook the blood of 300 virgin goats</li>
-        <li>Combine and consume</li>
+    <h3>The way</h3>
+    <ol class="list-format">
+        <li>Pre-heat oven to 190°C.</li>
+        <li>To make the meat sauce, sauté onion and garlic until soft. Add beef mince and cook until browned.</li>
+        <li>Stir in San Remo tomato-based sauce. Season with salt and pepper to taste.</li>
+        <li>Cover and simmer for 10-20 mins.</li>
+        <li>To make the cheese sauce, heat butter in a saucepan over low heat. Add flour and mix until smooth.</li>
+        <li>Gradually add milk and gently bring to the boil, stirring until thick and smooth.</li>
+        <li>425g San Remo tomato-based sauce</li>
+        <li>Add parmesan or cheddar cheese, stir until melted.</li>
+        <li>To construct lasagna, in a lightly greased baking dish, layer meat sauce, cheese sauce and lasagna sheets, (making sure the lasagna sheets are totally covered).</li>
+        <li>Repeat layers, finishing with cheese sauce. Scatter over mozzarella cheese.</li>
+        <li>Cover loosely with foil, bake 20 minutes. Remove foil, bake a further 5-10 minutes until browned.</li>
+	<li>Serve and enjoy with family and friends!</li>
     </ol>
 </body>
 </html>
