--- a/recipes/iced_cream.html
+++ b/recipes/iced_cream.html
@@ -4,28 +4,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css">
     <title>Iced Cream recipe</title>
 </head>
-<body>
+<body class="main-bg">
     <h1>Iced Cream</h1>
-    <a href="../index.html">Go Back</a>
+    <a class="back-button" href="../index.html">Go Back</a>
     <p></p>
-    <img src="../Images/iced_cream.jpg" alt="iced cream image">
+    <img class="page-images"  src="../Images/iced_cream.jpg" alt="iced cream image">
     <h2>Ice Cream Fiend</h2>
-    <p> blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah  </p>
-    <p> blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah </p>
+    <p> Ice cream is one of lifes greatest joys  </p>
+    <p> Don't fuck up! </p>
     <h3>Ingredients</h3>
-    <ul>
-        <li>Ice</li>
-        <li>Cream</li>
-        <li>Fiends</li>
-        <li>Deliciousness</li>
+    <ul class="list-format">
+        <li>284ml carton double cream</li>
+        <li>300ml full fat milk</li>
+        <li>115g golden caster sugar</li>
+        <li>1 vanilla pod</li>
+        <li>3 large free-range egg yolks</li>
+        <li>have lots of ice cubes at the ready</li>
     </ul>
-    <h4>The way</h4>
-    <ol>
-        <li>Combine the ingredients, ensuring to sufficiently skin the fiends</li>
-        <li>Wait for the Fiends screaming to subside</li>
-        <li>Combine and consume</li>
+    <h3>The way</h3>
+    <ol class="list-format">
+        <li>Put the canister from the machine into the freezer a day before you want to make the ice cream. Next day, pour the cream and milk into a medium heavy-based pan, then tip in half the sugar. Slit the vanilla pod down its length with a small sharp knife and scoop out as many of the tiny black seeds as you can into the cream mixture. Cut the pod into three and drop it into the pan.</li>
+        <li>Heat the cream and milk over a low heat, stirring occasionally, until it almost boils – you’ll see a few bubbles at the edge. Take off the heat and set aside for 30 minutes so the vanilla can infuse.</li>
+        <li>Put the egg yolks into a bowl with the rest of the sugar and beat with an electric hand beater for about 2 mins until the mixture has thickened, is paler in colour and falls in thick ribbons when you lift the beaters. Using a measuring jug, scoop out about 125ml of the cream mixture and beat into the egg yolks to slacken them. Reheat the cream until it just comes to the boil, take off the heat and stir in the egg yolk mixture.</li>
+        <li>Return the pan to a low heat and cook, stirring all the time with a wooden spoon, for 8-10 mins, until the custard is thick enough to coat the back of the spoon. Watch that it doesn’t boil – as soon as you see any bubbles about to burst to the surface, it should be thick enough, so take the pan off the heat so the mixture doesn’t curdle.</li>
+        <li>Pour the custard into a heatproof bowl, then sit it in a bigger bowl one third full of iced water to cool (this takes about 20 mins). Stir occasionally to stop a skin forming. Put the bowl of custard in the fridge for 3-4 hrs, preferably overnight, so it gets really cold.</li>
+        <li>Get the ice cream machine running, scoop out the vanilla pod pieces, then slowly pour in the cold custard. Leave it to churn for 10-30 mins (depending on your machine). When it stops, it is probably too soft to eat, so spoon into a plastic container, cover with cling film, then a lid, and freeze for a minimum of 3 hrs. (It will keep in the freezer for 3 months but don’t take it out, then refreeze.) Remove from the freezer 15 mins before serving.</li>
+        <li>To make it by hand: in step 1, heat the milk, vanilla, and half the sugar without the cream (the custard will be slightly thicker). At the start of step 6, whip the cream so it’s light and floppy, not too stiff, and fold it into the cold custard. Freeze for 3-4 hrs, stirring once an hour until almost frozen, then freeze as above.</li>
     </ol>
 </body>
 </html>
