added zivs recipe page and image for this page

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <li id="lasagna-bg"><a href="recipes/lasagna.html">Lasagna Recipe</li>
         <li id="iced-cream-bg"><a href="recipes/iced_cream.html">Iced Cream Recipe</li>
         <li id="cake-bg"><a href="recipes/cake.html">Cake Recipe</li>
+        <li id="ziv-bg"><a href="recipes/Zivrecipe.html">Ziv's Recipe</li>
     </ul>
     <img class="page-images" src="Images/tree-bg.jpg" alt="tree image">
     </body>
